--- a/goujiuwang/src/pages/Home/Home.css
+++ b/goujiuwang/src/pages/Home/Home.css
@@ -77,3 +77,32 @@
 .classify>div img{
     width: 100%;
 }
+/* 秒杀倒计时 */
+.seckill{
+    background-color: #fff;
+    color: #333;
+    font-size: 14px;
+    overflow: hidden;
+    padding: 10px 15px;
+    border-top: 1px solid #EEE;
+    line-height: 24px;
+}
+.seckill b{
+    color: #333;
+    font-size: 14px;
+    margin-right: 5px;
+}
+.seckill span{
+    color: #6B6B6B;
+    margin-right: 5px;
+}
+.seckill i{
+    font-style: normal;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    background: #999;
+    border-radius: 5px;
+    color: #fff;
+    display: inline-block;
+}
