--- a/goujiuwang/src/pages/Home/Home.css
+++ b/goujiuwang/src/pages/Home/Home.css
@@ -3,13 +3,13 @@
    position: relative;
 }
 #main{
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 #footer{
     width: 100%;
-position: fixed;
-bottom: 0;
-background: #fff;
+    position: fixed;
+    bottom: 0;
+    background: #fff;
 }
 .HomeHeader{
     position: relative;
@@ -253,10 +253,10 @@ background: #fff;
 .red {
     color: #fb223e;
 }
-
-
-/* 底部导航 */
-.goodsNav{
+.goodsShow{
+    margin-bottom: 50px;
+}
+.goodsNav{ 
     height: 44px;
     line-height: 44px;
     color: #333;
@@ -268,6 +268,7 @@ background: #fff;
     color: #f44;
     border-bottom: 2px solid #f44;
 }
+/* 底部导航 */
 .footer{
     height: 50px;
     padding-top: 4px;
