--- a/goujiuwang/src/pages/Home/Home.css
+++ b/goujiuwang/src/pages/Home/Home.css
@@ -216,13 +216,13 @@
 .goods .pro_item{
     border: #eee 1px solid;
 }
-.goods .pro_item span{
+.goods .pro_item>span{
     color: #999;
     width: 96%;
     display: block;
     margin: 0 auto;
 }
-.goods .pro_item span img{
+.goods .pro_item>span img{
     width: 100%;
 }
 .goods .pro_item p{
